examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let x: Int = 1 + 2.5
    x
}
